--- a/src/layout/Footer.module.css
+++ b/src/layout/Footer.module.css
@@ -1,12 +1,7 @@
-footer{
-  width: 90%;
-  margin: auto;
-}
-
 .footer {
   background-color: #222;
   color: #fff;
-  padding: 2em;
+  padding: 1.5em;
   text-align: center;
 }
 
@@ -25,12 +20,12 @@ footer{
 }
 
 .social_list svg {
-  font-size: 2em;
+  font-size: 1.5em;
   cursor: pointer;
 }
 
 .copy_right {
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 .copy_right span {
@@ -38,7 +33,7 @@ footer{
   color: #ffbb33;
 }
 
-a {
+.link {
   text-decoration: none;
   color: inherit;
 }
