--- a/src/layout/Container.module.css
+++ b/src/layout/Container.module.css
@@ -5,3 +5,18 @@
   text-align: center;
   min-height: 80vh;
 }
+
+.divInput {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  margin: 0 auto 25px;
+  background-color: #222;
+  padding: 1.5em;
+  border-radius: 5px;
+
+  -webkit-box-shadow: 0px 10px 13px -7px #000000,
+    5px 5px 21px 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 10px 13px -7px #000000, 5px 5px 21px 10px rgba(0, 0, 0, 0.15);
+}
