--- a/src/layout/Header.module.css
+++ b/src/layout/Header.module.css
@@ -1,10 +1,14 @@
 .header {
   background-color: #222;
   color: #fff;
-  padding: 1em;
+  padding: 1.2em;
   text-align: center;
 }
 
 .title {
-  padding-bottom: 0.5em;
+  padding-bottom: 0.2em;
+}
+
+.paragraph {
+  padding-bottom: 0.2em;
 }
