--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,7 +1,7 @@
 .button {
-  background-color: #4caf50;
+  background-color: white;
   border: none;
-  color: white;
+  color: #222;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
