--- a/src/layout/Container.module.css
+++ b/src/layout/Container.module.css
@@ -6,11 +6,11 @@
   min-height: 80vh;
 }
 
-.divInput {
+.form {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50%;
+  width: 90%;
   margin: 0 auto 25px;
   background-color: #222;
   padding: 1.5em;
